--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "gitdoc.enabled": false //なんか勝手にpullされて過去のに戻ってたから使うのやめた
+  "gitdoc.enabled": false //なんか勝手にpullされて過去のに戻ってたから使うのやめた//あとはgithubの芝が相対的に減る
 }
