--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,48 +2,21 @@
   "version": "2.0.0",
   "tasks": [
     {
-      "label": "C: gcc アクティブなファイルのビルド",
+      "label": "Build C Program",
       "type": "shell",
-      "command": "/usr/bin/gcc",
+      "command": "gcc",
       "args": [
-        "-fdiagnostics-color=always",
         "-g",
-        "${file}",
+        "src\\src8\\2_keepd_leave_or.c",
+        "src\\src8\\mt19937ar.c",
         "-o",
-        "${fileDirname}/${fileBasenameNoExtension}"
-      ],
-      "options": {
-        "cwd": "${fileDirname}"
-      },
-      "problemMatcher": [
-        "$gcc"
-      ],
-      "group": "build",
-      "detail": "macOS用に設定されたCビルドタスク"
-    },
-    {
-      "type": "cppbuild",
-      "label": "C/C++: clang アクティブなファイルのビルド",
-      "command": "/usr/bin/clang",
-      "args": [
-        "-fcolor-diagnostics",
-        "-fansi-escape-codes",
-        "-g",
-        "${file}",
-        "-o",
-        "${fileDirname}/${fileBasenameNoExtension}"
-      ],
-      "options": {
-        "cwd": "${fileDirname}"
-      },
-      "problemMatcher": [
-        "$gcc"
+        "src\\src8\\2_keepd_leave_or.exe"
       ],
       "group": {
         "kind": "build",
         "isDefault": true
       },
-      "detail": "デバッガーによって生成されたタスク。"
+      "problemMatcher": ["$gcc"]
     }
   ]
 }
